--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ public_html/_css/.DS_Store
 public_html/_imagens/.DS_Store
 *.xml
 nbproject/private/private.xml
+nbproject/private/private.properties
