--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ public_html/_imagens/.DS_Store
 *.xml
 nbproject/private/private.xml
 nbproject/private/private.properties
+nbproject/private/private.xml
