--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ public_html/_imagens/.DS_Store
 nbproject/private/private.xml
 nbproject/private/private.properties
 nbproject/private/private.xml
+nbproject/private/private.xml
+*.xml
