--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ nbproject/private/private.properties
 nbproject/private/private.xml
 nbproject/private/private.xml
 *.xml
+*.xml
+nbproject/private/private.xml
